@@ -1,4 +1,5 @@
 1.1.x [2013-??-??]
+ - NB! Using shapes such as (1,) and (1,1) instead of () for 1D tensor quantities I, x, grad(f)
  - Add cell.facet_diameter
  - Add new concepts Domain, Region
 1.1.0 [2013-01-07]
